esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/version: "2026.9.1"
spec:
  type: ClusterIP
  ports:
    - port: 6052
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: esphome
